--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -5,7 +5,7 @@
             {% comment %} <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_1';">
                 Clear Completed Blends
             </button> {% endcomment %}
-            <button type="button" id="noteRowButton" class="btn btn-secondary">Add Note to Schedule</button>
+            <button type="button" id="noteRowButton" class="btn btn-secondary" {% if not user.is_staff %}style="display: none;"{% endif %}>Add Note to Schedule</button>
         </div>
     {% endif %}
     <div class="table-responsive-sm">
