--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -1,13 +1,11 @@
 {% load static %}
 {% if desk_two_blends %}
-    {% if user.is_staff %}
-        <div class="buttonContainer text-center">
-            {% comment %} <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_1';">
-                Clear Completed Blends
-            </button> {% endcomment %}
-            <button type="button" id="noteRowButton" class="btn btn-secondary">Add Note to Schedule</button>
-        </div>
-    {% endif %}
+    <div class="buttonContainer text-center">
+        {% comment %} <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_1';">
+            Clear Completed Blends
+        </button> {% endcomment %}
+        <button type="button" id="noteRowButton" class="btn btn-secondary" {% if not user.is_staff %}style="display: none;"{% endif %}>Add Note to Schedule</button>
+    </div>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered" id="deskScheduleTable">
             <thead class="thead-dark">
