--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -17,8 +17,8 @@
                     <th scope="col">Mix Vessel</th>
                     <th scope="col">Lot No.</th>
                     <th scope="col">Quantity</th>
-                    <th scope="col">Short</th>
                     <th scope="col">Blend Sheet Status</th>
+                    <th scope="col">Short</th>
                     {% comment %} <th scope="col">Cumulative</th> {% endcomment %}
                     {% if user.is_staff %}<th scope="col" class="noPrint">Manage</th>{% endif %}
                 </tr>
@@ -82,15 +82,6 @@
                         {% endif %}
                     </td>
                     <td>{% if not item.item_code == "******" %}{{ item.quantity|floatformat:1 }} gal{% endif %}</td>
-                    <td data-hour-short="{{ item.hourshort|floatformat:1 }}">
-                        {% if item.line != 'Prod' %}
-                            {{ item.run_date|date:"m/d/y" }}
-                        {% elif 'LET' in item.item_description and '(kinpak)' in item.item_description %}
-                            {{ item.run_date|date:"m/d/y" }}
-                        {% else %}
-                            {{ item.hourshort|floatformat:1 }}
-                        {% endif %}
-                    </td>
                     <td class="text-center">
                         {% if item.lot_num_record_obj %}
                             <span class="blend-sheet-status"
@@ -110,14 +101,23 @@
                             <span class="blend-sheet-status" data-has-been-printed="false" title="Blend sheet has not been printed."><em>Not Printed</em></span>
                         {% endif %}
                     </td>
+                    <td data-hour-short="{{ item.hourshort|floatformat:1 }}">
+                        {% if item.line != 'Prod' %}
+                            {{ item.run_date|date:"m/d/y" }}
+                        {% elif 'LET' in item.item_description and '(kinpak)' in item.item_description %}
+                            {{ item.run_date|date:"m/d/y" }}
+                        {% else %}
+                            {{ item.hourshort|floatformat:1 }}
+                        {% endif %}
+                    </td>
                     {% comment %} <td>{{ item.cumulative_qty }}</td> {% endcomment %}
                     {% if user.is_staff %}
                         <td class="noPrint">
                             <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1{{ item.id | default:forloop.counter }}" data-bs-toggle="dropdown" aria-expanded="false">
                                     Manage...
                                 </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1{{ item.id | default:forloop.counter }}">
                                     {% if not item.item_code == "INVENTORY" %}
                                         <li><a class="dropdown-item" href="/core/schedule-management-request/switch-schedules/{{ item.blend_area }}/{{ item.id }}?request-source=desk-1-schedule&amp;switch-to=Desk_2">Switch To Desk_2</a></li>
                                         <li><a class="dropdown-item" href="/core/schedule-management-request/switch-schedules/{{ item.blend_area }}/{{ item.id }}?request-source=desk-1-schedule&amp;switch-to=LET_Desk">Switch To LET_Desk</a></li>
