fix currentUserUsername location into all user navbars

--- a/app/templates/navbars/all-users-navbar-items.html
+++ b/app/templates/navbars/all-users-navbar-items.html
@@ -18,3 +18,7 @@
         <a class="nav-link" href="/core/feedback/">Feedback</a>
     </li>
 </li>
+<script>
+    window.currentUserUsername = "{{ user.username|escapejs }}";
+    console.log(window.currentUserUsername)
+</script>
