--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -29,7 +29,7 @@
         {% include 'core/blendschedules/desktwoschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="LETDeskContainer">
-        <br><a href="/core/blend-schedule?blend-area=Desk_2">View Desk 2 Schedule</a>
+        <br><a href="/core/blend-schedule?blend-area=LET_Desk">View LET Desk Schedule</a>
         {% include 'core/blendschedules/LETdeskschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="horixContainer">
