--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -9,7 +9,7 @@
         </div>
     {% endif %}
     <div class="table-responsive-sm">
-        <table class="table text-left table-bordered" id="deskScheduleTable">
+        <table class="table text-left table-bordered" id="{% if blend_area == 'all' %}desk1ScheduleTable{% else %}deskScheduleTable{% endif %}">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Blend</th>
