--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -7,7 +7,7 @@
         <button type="button" id="noteRowButton" class="btn btn-secondary" {% if not user.is_staff %}style="display: none;"{% endif %}>Add Note to Schedule</button>
     </div>
     <div class="table-responsive-sm">
-        <table class="table text-left table-bordered" id="deskScheduleTable">
+        <table class="table text-left table-bordered" id="{% if blend_area == 'all' %}desk2ScheduleTable{% else %}deskScheduleTable{% endif %}">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Blend</th>
