Enhance toteclassifications further.

--- a/app/core/templates/core/toteclassifications.html
+++ b/app/core/templates/core/toteclassifications.html
@@ -43,6 +43,7 @@
                 <tr>
                     <th scope="col" class='text-center'>Item Code</th>
                     <th scope="col" class='text-center'>Tote Classification</th>
+                    <th scope="col" class='text-center'>Hose Color</th>
                     <th scope="col" class='text-center'></th>
                 </tr>
             </thead>
@@ -51,6 +52,7 @@
                     <tr class="filterableRow">
                         <td>{{ item.item_code }}</td>
                         <td>{{ item.tote_classification }}</td>
+                        <td>{{ item.hose_color }}</td>
                         <td>
                             <button class="editBtn"><i class="fas fa-pencil-alt"></i></button>
                             <button class="deleteBtn"><i class="fas fa-trash-alt"></i></button>
